# cubie

./: Cargo.toml  README.md
doc/: design-face-rotation.md  design-rubiks-cube-scramble.md  design-rubiks-cube-solver.md  design-rubiks-cube-undo-redo.md  design-rubiks-cube.md  prompt-design-rubiks-cube.md  prompt-rubiks-cube-face-rotation-design.md  prompt-rubiks-cube-scramble-design.md  prompt-rubiks-cube-solver-design.md  prompt-rubiks-cube-undo-redo-design.md  stappenplan-cube-rendering.md
src/: camera.rs  icon.rs  main.rs
src/cube/: animation.rs  history.rs  input.rs  labels.rs  mod.rs  model.rs  picking.rs  rotation.rs  scramble.rs  solver.rs  spawn.rs
