[package]
name = "cubie"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
winit = "0.30"
rand = "0.8"
rcuber = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSImage", "NSBitmapImageRep", "NSImageRep"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSGeometry"] }
